added jwt and hash pass logic/updated tests